--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>index</title>
+
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<div class="banner"></div>
+	<div class="banner">
+		<marquee direction="down">
+		<div class="logo"><img src="logo.png"></div>
+	</div></marquee>
 	<div class="navbar" >
 		<nav>
 			<div class="nabr">Home </div>
@@ -16,13 +21,36 @@
 	</div>
 	<div class="content">
 	<div class="hottopic">
-		<h3>content1<h3>
+			<div class="subhottopic"><h6>topic1</h6><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+			<div class="subhottopic"><h6>topic1</h6><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+			<div class="subhottopic"><h6>topic1</h6><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
 
 	</div>
 	<div class="site">
 		<h3>content2</h3>
 	</div>
 	<div class="sitetwo">content3</div>
+</div>
+<div class="footer">
+	<div>Follow us </div>
+<img src="fb.jpg"  class="img" alt="image not found">
+<img src="tw.jpg" class="img" alt="image not found">
+<H6>copyright © 2018 JASIN</H6>
 </div>
 </body>
 </html>
