--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>index</title>
+	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"  crossorigin="anonymous"> -->
+
 
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
+	<div class="wrapper">
 	<div class="banner">
 		<marquee direction="down">
-		<div class="logo"><img src="logo.png"></div>
-	</div></marquee>
+		<div class="logo"><img src="img/logo.png"></div>
+	</marquee></div>
 	<div class="navbar" >
 		<nav>
-			<div class="nabr">Home </div>
-			<div class="nabr">Blog</div>
+			<div class="nabr"><a style="text-decoration:none" href="index.html">Home </a></div>
+			<div class="nabr"><a style="text-decoration:none" href="blog.html">Blog</a></div>
 			<div class="nabr">Contact </div>
 			<div class="nabr">AboutMe</div>
 		</nav>
 	</div>
 	<div class="content">
 	<div class="hottopic">
-			<div class="subhottopic"><h6>topic1</h6><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur.</p>
+			<div class="subhottopic">
+				<div class="lastsubhottopic">image</div>
+				<h6>topic1</h6>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. </p>
 			</div>
-			<div class="subhottopic"><h6>topic1</h6><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur.</p>
+			<div class="subhottopic">
+				<div class="lastsubhottopic">image</div>
+				<h6>topic1</h6>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. </p>
 			</div>
-			<div class="subhottopic"><h6>topic1</h6><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur.</p>
+			<div class="subhottopic">
+				<div class="lastsubhottopic">image</div>
+				<h6>topic1</h6>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. </p>
 			</div>
 
 	</div>
@@ -45,12 +48,13 @@
 		<h3>content2</h3>
 	</div>
 	<div class="sitetwo">content3</div>
-</div>
+	</div>
 <div class="footer">
 	<div>Follow us </div>
-<img src="fb.jpg"  class="img" alt="image not found">
-<img src="tw.jpg" class="img" alt="image not found">
+<img src="img/fb.jpg"  class="img" alt="image not found">
+<img src="img/tw.jpg" class="img" alt="image not found">
 <H6>copyright © 2018 JASIN</H6>
+</div>
 </div>
 </body>
 </html>
